--- a/css/style.css
+++ b/css/style.css
@@ -143,12 +143,12 @@ button {
 	#review .review_item_wrap li {font-size:16px;}
 }
 
-#trust_count .inner .real_time .today .today_won{position: relative;bottom: 396px;left: 200px; font-size: 45px}
-#trust_count .inner .real_time .total_wrap .total_won{position: relative;bottom: 600px;left: 200px; font-size: 45px}
-#trust_count .inner .percent_wrap .ct_percent .ct_p_wrap_1 {position: relative;bottom: 600px;left: 200px; font-size: 45px}
-#trust_count .inner .percent_wrap .ct_percent .ct_p_wrap_2 {position: relative;bottom: 600px;left: 200px; font-size: 45px}
-#trust_count .inner .percent_wrap .ct_percent .ct_p_wrap_3 {position: relative;bottom: 600px;left: 200px; font-size: 45px}
-
+#trust_count .inner .real_time .today .today_won{position: absolute;top: 31.7%;left: 28.2%; font-size: 45px}
+#trust_count .inner .real_time .total_wrap .total_won{position: absolute;top: 49.5%;left: 23%; font-size: 45px}
+#trust_count .inner .percent_wrap .ct_percent .ct_p_wrap_1 {position: absolute;top: 77.4%;left: 22.2%; font-size: 45px; display: flex;}
+#trust_count .inner .percent_wrap .ct_percent .ct_p_wrap_2 {position: absolute;top: 77.4%;left: 54.4%; font-size: 45px; display: flex;}
+#trust_count .inner .percent_wrap .ct_percent .ct_p_wrap_3 {position: absolute;top: 77.4%;left: 86.8%; font-size: 45px; display: flex;}
+#trust_count .inner {position:relative;}
             
 
 
